--- a/templates/product/new.html.twig
+++ b/templates/product/new.html.twig
@@ -8,6 +8,8 @@
 {#<script src="../Scripts/jquery-3.1.0.min.js" type="text/javascript"></script>#}
 {% endblock %}
 {% block js %}
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script>
         CKEDITOR.replace( 'editor1',{
         language: 'fa'
@@ -23,67 +25,41 @@
             });
         });
     </script>
-<script>
-$(document).ready(function() {
-    $('#uploadButton').click(function() {
-        var formData = new FormData();
-        formData.append('html-file', $('#htmlFileInput')[0].files[0]);
+    <script>
+        $(document).ready(function() {
+            $('#uploadBtn').click(function() {
+                var files = $('#fileInput')[0].files;
+                var formData = new FormData();
 
-        $.ajax({
-            url: '{{ path('file_upload') }}', // Replace with your Symfony route
-            type: 'POST',
-            data: formData,
-            processData: false, // Don't process the data
-            contentType: false, // Set content type to false
-            success: function(response) {
-                // Handle success response
-                console.log('File uploaded successfully:', response);
-                $('#filePathInput').val(response.path); // Update input field with file path
-            },
-            error: function(xhr, status, error) {
-                // Handle error
-                console.error('Error uploading file:', error);
-                // Optionally, show an error message
-            }
-        });
-    });
-});
-</script>
-<script>
-    $(document).ready(function() {
-        $('#uploadBtn').click(function() {
-            var files = $('#fileInput')[0].files;
-            var formData = new FormData();
+                formData.append('type', 1); // Example type, change as needed
+                formData.append('id', 1); // Example ID, change as needed
+                formData.append('status', 'gallery'); // or 'mainpic'
 
-            formData.append('type', 1); // Example type, change as needed
-            formData.append('id', 1); // Example ID, change as needed
-            formData.append('status', 'gallery'); // or 'mainpic'
-
-            for (var i = 0; i < files.length; i++) {
-                formData.append('files[]', files[i]);
-            }
-
-            $.ajax({
-                url: '{{ path('upload_file') }}',
-                type: 'POST',
-                data: formData,
-                contentType: false,
-                processData: false,
-                success: function(response) {
-                    var fileAddresses = response.fileAddresses;
-                    var uploadedFilesDiv = $('#uploadedFiles');
-                    uploadedFilesDiv.empty();
-                    fileAddresses.forEach(function(address) {
-                        uploadedFilesDiv.append('<div>' + address + '</div>');
-                    });
-                },
-                error: function(xhr, status, error) {
-                    console.error('File upload failed:', error);
+                for (var i = 0; i < files.length; i++) {
+                    formData.append('files[]', files[i]);
                 }
+
+                $.ajax({
+                    url: '{{ path('upload_file') }}',
+                    type: 'POST',
+                    data: formData,
+                    contentType: false,
+                    processData: false,
+                    success: function(response) {
+                        var fileAddresses = response.fileAddresses;
+                        var uploadedFilesDiv = $('#uploadedFiles');
+                        uploadedFilesDiv.empty();
+                        fileAddresses.forEach(function(address) {
+                            uploadedFilesDiv.append('<div>' + address + '</div>');
+                        });
+                    },
+                    error: function(xhr, status, error) {
+                        console.error('File upload failed:', error);
+                    }
+                });
             });
         });
-    });
-</script>
+    </script>
 {% endblock %}
 {% block body %}
     <!--begin::Content-->
@@ -354,24 +330,7 @@ $(document).ready(function() {
                                                                                             <input type="text" name="order" class="form-control mb-2" placeholder="ترتیب را وارد کنید" value="" />
                                                                                             <!--end::Input-->
                                                                                     </div>
-                                                                                    <div class="mb-10 fv-row">
-                                                                                            <!--begin::Tags-->
-                                                                                            <label class="required form-label">فایل اچ تی ام ال</label>
-                                                                                            <!--end::Tags-->
-                                                                                            <!--begin::Input-->
-                                                                                        <input type="file" name="html-file" id="htmlFileInput" />
-                                                                                        <button type="button" id="uploadButton">آپلود</button>
-                                                                                        <input type="text" name="filePath" id="filePathInput" readonly />
-                                                                                        <!--end::Input-->
-                                                                                    </div>
-
-                                                                                    <label>آپلود چند فایل</label>
-                                                                                    <input type="file" id="fileInput" multiple>
-                                                                                    <button type="button" id="uploadBtn">آپلود</button>
-                                                                                    <div id="uploadedFiles"></div>
-
-
-
+ 
                                                                                     <!--end::Input group-->
                                                                             </div>
                                                                             <!--end::کارت header-->
