--- a/templates/default/front/product/list.html.twig
+++ b/templates/default/front/product/list.html.twig
@@ -1,7 +1,4 @@
 {% extends "base.front.twig" %}
-{#{% for product in article %}
-    <h1>amin</h1>
-{% endfor %}#}
 {% block body %}
     <!-- News Section -->
     <section class="news-section">
@@ -9,112 +6,30 @@
 
             <div class="row">
                 <!-- News Block -->
-                <div class="news-block col-lg-4 col-md-6 col-sm-12">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="blog-detail.html"><img src="images/resource/news-1.jpg" alt=""></a></figure>
-                        </div>
-                        <div class="lower-content">
-                            <div class="post-date"><span class="far fa-calendar"></span> Jan 01, 2020</div>
-                            <ul class="post-info">
-                                <li><span class="far fa-user"></span> By Admin | </li>
-                                <li><a href="blog-grid.html#">General Carpentry</a></li>
-                            </ul>
-                            <h4><a href="blog-detail.html">Woodworker treak truned into furniture for exhibition.</a></h4>
-                            <div class="btn-box"><a href="blog-grid.html#" class="read-more">Read More <span class="fa fa-arrow-right"></span></a></div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- News Block -->
-                <div class="news-block col-lg-4 col-md-6 col-sm-12">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="blog-detail.html"><img src="images/resource/news-2.jpg" alt=""></a></figure>
-                        </div>
-                        <div class="lower-content">
-                            <div class="post-date"><span class="far fa-calendar"></span> Jan 02, 2020</div>
-                            <ul class="post-info">
-                                <li><span class="far fa-user"></span> By Admin | </li>
-                                <li><a href="blog-grid.html#">General Carpentry</a></li>
-                            </ul>
-                            <h4><a href="blog-detail.html">Home Repair and Maintain safe now in the rantain.</a></h4>
-                            <div class="btn-box"><a href="blog-grid.html#" class="read-more">Read More <span class="fa fa-arrow-right"></span></a></div>
+                {% for product in products %}
+                    <div class="news-block col-lg-4 col-md-6 col-sm-12">
+                        <div class="inner-box">
+                            <div class="image-box">
+                                <figure class="image">
+                                    <a href="blog-detail.html">
+                                        {% if product.Image is not null and product.Image.path is not null and product.Image.name is not null %}
+                                             <img src="{{ product.Image.path ~ '/770x350_' ~ product.Image.name ~ '.webp' }}" alt="">
+                                        {% endif %}
+                                    </a>
+                                </figure>
+                            </div>
+                            <div class="lower-content">
+                                <div class="post-date"><span class="far fa-calendar"></span> Jan 01, 2020</div>
+                                <ul class="post-info">
+                                    <li><span class="far fa-user"></span>ادمین</li>
+                                    <li><span class="far fa-calendar"></span><a href="blog-grid.html#">دسته بندی</a></li>
+                                </ul>
+                                <h4><a href="blog-detail.html">{{ product.title }}</a></h4>
+                                <div class="btn-box"><a href="blog-grid.html#" class="read-more">Read More <span class="fa fa-arrow-right"></span></a></div>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <!-- News Block -->
-                <div class="news-block col-lg-4 col-md-6 col-sm-12">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="blog-detail.html"><img src="images/resource/news-3.jpg" alt=""></a></figure>
-                        </div>
-                        <div class="lower-content">
-                            <div class="post-date"><span class="far fa-calendar"></span> Jan 03, 2020</div>
-                            <ul class="post-info">
-                                <li><span class="far fa-user"></span> By Admin | </li>
-                                <li><a href="blog-grid.html#">General Carpentry</a></li>
-                            </ul>
-                            <h4><a href="blog-detail.html">Good furniture is now on persale in showroom in Dec.</a></h4>
-                            <div class="btn-box"><a href="blog-grid.html#" class="read-more">Read More <span class="fa fa-arrow-right"></span></a></div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- News Block -->
-                <div class="news-block col-lg-4 col-md-6 col-sm-12">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="blog-detail.html"><img src="images/resource/news-4.jpg" alt=""></a></figure>
-                        </div>
-                        <div class="lower-content">
-                            <div class="post-date"><span class="far fa-calendar"></span> Jan 01, 2020</div>
-                            <ul class="post-info">
-                                <li><span class="far fa-user"></span> By Admin | </li>
-                                <li><a href="blog-grid.html#">General Carpentry</a></li>
-                            </ul>
-                            <h4><a href="blog-detail.html">Woodworker treak truned into furniture for exhibition.</a></h4>
-                            <div class="btn-box"><a href="blog-grid.html#" class="read-more">Read More <span class="fa fa-arrow-right"></span></a></div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- News Block -->
-                <div class="news-block col-lg-4 col-md-6 col-sm-12">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="blog-detail.html"><img src="images/resource/news-5.jpg" alt=""></a></figure>
-                        </div>
-                        <div class="lower-content">
-                            <div class="post-date"><span class="far fa-calendar"></span> Jan 02, 2020</div>
-                            <ul class="post-info">
-                                <li><span class="far fa-user"></span> By Admin | </li>
-                                <li><a href="blog-grid.html#">General Carpentry</a></li>
-                            </ul>
-                            <h4><a href="blog-detail.html">Home Repair and Maintain safe now in the rantain.</a></h4>
-                            <div class="btn-box"><a href="blog-grid.html#" class="read-more">Read More <span class="fa fa-arrow-right"></span></a></div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- News Block -->
-                <div class="news-block col-lg-4 col-md-6 col-sm-12">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="blog-detail.html"><img src="images/resource/news-6.jpg" alt=""></a></figure>
-                        </div>
-                        <div class="lower-content">
-                            <div class="post-date"><span class="far fa-calendar"></span> Jan 03, 2020</div>
-                            <ul class="post-info">
-                                <li><span class="far fa-user"></span> By Admin | </li>
-                                <li><a href="blog-grid.html#">General Carpentry</a></li>
-                            </ul>
-                            <h4><a href="blog-detail.html">Good furniture is now on persale in showroom in Dec.</a></h4>
-                            <div class="btn-box"><a href="blog-grid.html#" class="read-more">Read More <span class="fa fa-arrow-right"></span></a></div>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
     </section>
