--- a/templates/default/front/product/list.html.twig
+++ b/templates/default/front/product/list.html.twig
@@ -19,10 +19,10 @@
                                 </figure>
                             </div>
                             <div class="lower-content">
-                                <div class="post-date"><span class="far fa-calendar"></span> Jan 01, 2020</div>
+                                <div class="post-date"><span class="far fa-calendar"></span>{{ product.cdate|localizeddatetr('custom', 'none', 'fa_IR@calendar=persian', 'Asia/Tehran', null) }}</div>
                                 <ul class="post-info">
-                                    <li><span class="far fa-user"></span>ادمین</li>
-                                    <li><span class="far fa-calendar"></span><a href="blog-grid.html#">دسته بندی</a></li>
+                                    <li><span class="far fa-user"></span> ادمین</li>
+                                    <li><span class="far fa-list-alt"></span><a href="blog-grid.html#">{{ product.Category.title }}</a></li>
                                 </ul>
                                 <h4><a href="blog-detail.html">{{ product.title }}</a></h4>
                                 <div class="btn-box"><a href="blog-grid.html#" class="read-more">Read More <span class="fa fa-arrow-right"></span></a></div>
