--- a/templates/product/new.html.twig
+++ b/templates/product/new.html.twig
@@ -189,7 +189,7 @@
                                                             <!--end::Tags-->
                                                             <!--begin::انتخاب2-->
                                                             <select name="category" class="form-select mb-2" data-control="select2" data-placeholder="انتخاب ">
-                                                                {% for category in getCategory()  %}
+                                                                {% for category in getCategory(1)  %}
                                                                     <option value="{{ category.id }}">{{ category.title }}</option>
                                                                 {% endfor %}
                                                             </select>
@@ -330,7 +330,7 @@
                                                                                             <input type="text" name="order" class="form-control mb-2" placeholder="ترتیب را وارد کنید" value="" />
                                                                                             <!--end::Input-->
                                                                                     </div>
- 
+
                                                                                     <!--end::Input group-->
                                                                             </div>
                                                                             <!--end::کارت header-->
