--- a/templates/user_information/not_purchased.html.twig
+++ b/templates/user_information/not_purchased.html.twig
@@ -6,7 +6,7 @@
 {% endblock jshead %}
 {% block body %}
     <h1>قالب انتخابی شما خریداری نشده</h1>
-    {{ info.product }}
+    {{ info.product.id }}
 {% endblock body %}
 {% block js %}
 
